// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get options default options 1`] = `
{
  "cssMatcher": [Function],
  "cssPreflight": {
    "border-color": "currentColor",
    "border-style": "solid",
    "border-width": "0",
    "box-sizing": "border-box",
  },
  "cssPreflightRange": "view",
  "customAttributes": {},
  "customReplaceDictionary": {
    "!": "_i_",
    """: "_dq_",
    "#": "_h_",
    "$": "_do_",
    "%": "_p_",
    "&": "_am_",
    "'": "_q_",
    "(": "_pl_",
    ")": "_qr_",
    "*": "_a_",
    "+": "_plus_",
    ",": "_co_",
    ".": "_d_",
    "/": "_s_",
    ":": "_c_",
    ";": "_se_",
    "<": "_l_",
    "=": "_e_",
    ">": "_g_",
    "?": "_qu_",
    "@": "_at_",
    "[": "_bl_",
    "\\": "_bs_",
    "]": "_br_",
    "^": "_ca_",
    "\`": "_bq_",
    "{": "_bal_",
    "|": "_b_",
    "}": "_bar_",
    "~": "_t_",
  },
  "customRuleCallback": [Function],
  "disabled": false,
  "escapeEntries": [
    [
      "[",
      "_bl_",
    ],
    [
      "]",
      "_br_",
    ],
    [
      "(",
      "_pl_",
    ],
    [
      ")",
      "_qr_",
    ],
    [
      "#",
      "_h_",
    ],
    [
      "!",
      "_i_",
    ],
    [
      "/",
      "_s_",
    ],
    [
      "\\",
      "_bs_",
    ],
    [
      ".",
      "_d_",
    ],
    [
      ":",
      "_c_",
    ],
    [
      "%",
      "_p_",
    ],
    [
      ",",
      "_co_",
    ],
    [
      "'",
      "_q_",
    ],
    [
      """,
      "_dq_",
    ],
    [
      "*",
      "_a_",
    ],
    [
      "&",
      "_am_",
    ],
    [
      "@",
      "_at_",
    ],
    [
      "{",
      "_bal_",
    ],
    [
      "}",
      "_bar_",
    ],
    [
      "+",
      "_plus_",
    ],
    [
      ";",
      "_se_",
    ],
    [
      "<",
      "_l_",
    ],
    [
      "~",
      "_t_",
    ],
    [
      "=",
      "_e_",
    ],
    [
      ">",
      "_g_",
    ],
    [
      "?",
      "_qu_",
    ],
    [
      "^",
      "_ca_",
    ],
    [
      "\`",
      "_bq_",
    ],
    [
      "|",
      "_b_",
    ],
    [
      "$",
      "_do_",
    ],
  ],
  "framework": "react",
  "htmlMatcher": [Function],
  "jsMatcher": [Function],
  "jsxHandler": [Function],
  "jsxRenameLoaderPath": "",
  "loaderOptions": {
    "jsxRename": false,
  },
  "mainCssChunkMatcher": [Function],
  "mangle": false,
  "onEnd": [Function],
  "onLoad": [Function],
  "onStart": [Function],
  "onUpdate": [Function],
  "replaceUniversalSelectorWith": "view",
  "styleHandler": [Function],
  "templeteHandler": [Function],
}
`;

exports[`get options vue framework 1`] = `
{
  "cssMatcher": [Function],
  "cssPreflight": {
    "border-color": "currentColor",
    "border-style": "solid",
    "border-width": "0",
    "box-sizing": "border-box",
  },
  "cssPreflightRange": "view",
  "customAttributes": {},
  "customReplaceDictionary": {
    "!": "_i_",
    """: "_dq_",
    "#": "_h_",
    "$": "_do_",
    "%": "_p_",
    "&": "_am_",
    "'": "_q_",
    "(": "_pl_",
    ")": "_qr_",
    "*": "_a_",
    "+": "_plus_",
    ",": "_co_",
    ".": "_d_",
    "/": "_s_",
    ":": "_c_",
    ";": "_se_",
    "<": "_l_",
    "=": "_e_",
    ">": "_g_",
    "?": "_qu_",
    "@": "_at_",
    "[": "_bl_",
    "\\": "_bs_",
    "]": "_br_",
    "^": "_ca_",
    "\`": "_bq_",
    "{": "_bal_",
    "|": "_b_",
    "}": "_bar_",
    "~": "_t_",
  },
  "customRuleCallback": [Function],
  "disabled": false,
  "escapeEntries": [
    [
      "[",
      "_bl_",
    ],
    [
      "]",
      "_br_",
    ],
    [
      "(",
      "_pl_",
    ],
    [
      ")",
      "_qr_",
    ],
    [
      "#",
      "_h_",
    ],
    [
      "!",
      "_i_",
    ],
    [
      "/",
      "_s_",
    ],
    [
      "\\",
      "_bs_",
    ],
    [
      ".",
      "_d_",
    ],
    [
      ":",
      "_c_",
    ],
    [
      "%",
      "_p_",
    ],
    [
      ",",
      "_co_",
    ],
    [
      "'",
      "_q_",
    ],
    [
      """,
      "_dq_",
    ],
    [
      "*",
      "_a_",
    ],
    [
      "&",
      "_am_",
    ],
    [
      "@",
      "_at_",
    ],
    [
      "{",
      "_bal_",
    ],
    [
      "}",
      "_bar_",
    ],
    [
      "+",
      "_plus_",
    ],
    [
      ";",
      "_se_",
    ],
    [
      "<",
      "_l_",
    ],
    [
      "~",
      "_t_",
    ],
    [
      "=",
      "_e_",
    ],
    [
      ">",
      "_g_",
    ],
    [
      "?",
      "_qu_",
    ],
    [
      "^",
      "_ca_",
    ],
    [
      "\`",
      "_bq_",
    ],
    [
      "|",
      "_b_",
    ],
    [
      "$",
      "_do_",
    ],
  ],
  "framework": "vue2",
  "htmlMatcher": [Function],
  "jsMatcher": [Function],
  "jsxHandler": [Function],
  "jsxRenameLoaderPath": "",
  "loaderOptions": {
    "jsxRename": false,
  },
  "mainCssChunkMatcher": [Function],
  "mangle": false,
  "onEnd": [Function],
  "onLoad": [Function],
  "onStart": [Function],
  "onUpdate": [Function],
  "replaceUniversalSelectorWith": "view",
  "styleHandler": [Function],
  "templeteHandler": [Function],
}
`;
